* reload the config file on HUP signal and switch to the new one if it 
  isn't broken. After reloading, restart gracefully so that no measurement is
  interrupted. The signal can also be triggered by 'smokeping --reload'.
  -- niko, suggested by Taisuke Yamada <tyamadajp *list.rakugaki.org>
* made some alert docs in smokeping_config visible --niko
* try to trigger an alert with the minimum number of values needed for it
  rather than require a stack with the maximum number of possible values.
  See http://lists.ee.ethz.ch/smokeping-users/msg01654.html for the problem.
  -- niko, reported by Leos Bitto <smokeping *leos.cz>
* automatically regenerate the logo images if Smokeping.pm has been updated --niko

2005/9/5 -- released version 2.0.1

* fixed version number display in basetemplate -- tobi

2005/9/4 -- released version 2.0.0

* updated page template to match new logos and included Niko
  -- tobi
* don't create directories in "datadir" when running as a CGI
  -- niko
* the DYNAMIC-related files (.adr and .snmp) can now be located outside "datadir"
  by specifying the new configuration variable "dyndir" 
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
* return '404 not found' when DYNAMIC updates fail
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
* make errors in DYNAMIC updates appear in the web server error log
  -- niko
* remove a quotemeta() call in Config::Grammar to allow metacharacters
  at the right side of '@define'
  -- niko, reported by Warrick FitzGerald <lists.smokeping.wfitzgerald *crtman.com>
* set LC_NUMERIC to C so that users who work with a locale like french that
  would use , as a decimal separator do not trip over failing regexp-matches
  (tobi)
* bugfix for CiscoRTTMonEchoICMP packetsize variable
  -- niko, from Sam Stickland <sam_ml *spacething.org>
* tune DS properties min/max/heartbeat instead of just complaing about
  them not matching (tobi)

2005/05/31 - publish rc5 (tobi)